# chronicle-cli

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
src/chronicle/: __init__.py  cli.py  config.py  models.py  parser.py  stats.py  storage.py
src/chronicle/ai/: __init__.py  freestyle.py  insights.py  process.py
src/chronicle/exporters/: markdown.py  story.py  weekly.py
src/chronicle/sync/: backend.py  crypto.py  gist_backend.py  pull.py  push.py
telegram_bot/: README.md  bot.py  config.py  crypto.py  main.py  requirements-gcf.txt
tests/: conftest.py  test_cli.py  test_crypto.py  test_edge_cases.py  test_export_md.py  test_gist_backend.py  test_parser.py  test_process.py  test_roundtrip.py  test_stats.py  test_sync_pull.py  test_sync_push.py  test_validate.py
