[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronicle-cli"
version = "0.1.0"
description = "A CLI journaling and self-analysis tool"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
chronicle = "chronicle.cli:app_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
